--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,3 +43,15 @@ h1, h2, h3 {
   padding-top: 50px;
   padding-bottom: 100px;
 }
+
+.navbar-default .navbar-toggle .icon-bar{
+  background-color:white;
+}
+
+.navbar-default .navbar-toggle{
+  border: 2px solid white;
+  &:hover, &:focus{
+    background-color: #00c6ff;
+  }
+}
+
